== Change Log

=== SVN
* Fix typo in pngfix.js. [Mislav Marohnić]
* Turn off auto-loading RSpec stuff, even in test environment.
  [Mislav Marohnić]
* Add specs for Annotatable, InheritableClassAttributes, LocalTime, 
  MethodObserver, and Simpleton. [Sean Cribbs]
* Add spec for Radiant::AdminUI and Users scenario. [Sean Cribbs]
* Import and create boilerplate for RSpec and Scenarios. [Sean Cribbs]
* Honor config.extensions when running rake test:extensions and also include
  core extensions. [Daniel Sheppard]
* Propagate global page when using <r:content /> with inherit attribute.
  [Sean Cribbs]

=== 0.6.4 Gem Shaper
* Extract Archive pages into a core extension. Add automatic testing of core 
  extensions from default test task. [Sean Cribbs]
* Add <r:if_children /> and <r:unless_children /> tags. [Andrew Neil]
* Add HTML labels to role checkboxes in user edit template. [zilkey]
* Cleanup whitespace and line-endings in environment.rb. [Bjorn Maeland]
* Fix various SQL Server issues via Rails ticket #8886. [Mark Gallop]
* Refactor locals from _node.rhtml into Admin::NodeHelper. [Sean Cribbs]
* Fix XHTML validation errors in view templates. [Bjorn Maeland]
* Update Prototype and script.aculo.us to 1.6 and 1.8 releases. [Sean Cribbs]
* Fix edge case in tabcontrol.js where tab label is incorrect. [Sean Cribbs]
* Remove duplication in admin.js. [Sean Cribbs]
* Factor TimeZone stuff out of Radiant::Config into a module, fix failing tests.
  [Sean Cribbs]
* Add has_part?, inherits_part?, and has_or_inherits_part? methods to Page.
  [ana]
* Allow setting of local timezone via Radiant::Config and auto-adjustment of times
  in admin UI and <r:date /> tag. [Bodhi Philpot]
* Update to latest Prototype and script.aculo.us and refactor and extract inline 
  Javascript into external files. [Mislav Marohnić]
* Narrow scope of exception to only throw on missing fixture files, allowing 
  invalid yaml errors through. [Daniel Sheppard]