@@ -5,6 +5,7 @@ The following people have submitted changes which have been applied to the
 core:
 
 === SVN
+* Bjørn Arild Mæland
 * Mislav Marohnić
 * Daniel Sheppard
 * Sean Cribbs
@@ -13,7 +14,7 @@ core:
 * Andrew Neil
 * zilkey
 * Mark Gallop
-* Bjorn Maeland
+* Bjørn Arild Mæland
 * ana
 * Bodhi Philpot
 * jay@jay.fm
